Первая мобильная версия

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
 <header class="header">
   <div class="header-header">
-    <a href="#"><div class="header-logo"></div>
+    <a href="#" class="a-class"><div class="header-logo"></div>
       </a>
     <nav class="menu">
+      <button class="menu__button js-menu__button">
+          <span class="menu__button-label">открыть меню</span>
+        </button>
       <ul class="menu-list">
         <li class="menu-list-item">
           <a href="#0" class="menu-link">Главная</a></li>
@@ -75,7 +78,7 @@
   <main class="main-article">
     <article class="article">
       <div class="picture">
-        <a href="#" class="picture-link"><img src="images/last-post1.jpg" alt="Рассвет на море"></a>
+        <a href="#" class="picture-link"><img src="images/last-post1.jpg" alt="Рассвет на море" class="img-class"></a>
       </div>
       <div class="contentbox">
         <ul class="headbox">
@@ -93,7 +96,7 @@
       </article>
     <article class="article">
       <div class="picture">
-        <a href="#" class="picture-link"><img src="images/last-post2.jpg" alt="Йога у моря"></a>
+        <a href="#" class="picture-link"><img src="images/last-post2.jpg" alt="Йога у моря" class="img-class"></a>
       </div>
       <div class="contentbox">
         <ul class="headbox">
@@ -111,7 +114,7 @@
     </article>
     <article class="article">
       <div class="picture">
-        <a href="#" class="picture-link"><img src="images/last-post3.jpg" alt="Девушка танцует"></a>
+        <a href="#" class="picture-link"><img src="images/last-post3.jpg" alt="Девушка танцует" class="img-class"></a>
       </div>
       <div class="contentbox">
         <ul class="headbox">
@@ -130,7 +133,7 @@
     </article>
     <article class="article">
       <div class="picture">
-        <a href="#" class="picture-link"><img src="images/last-post4.jpg" alt="Накрытый стол"></a>
+        <a href="#" class="picture-link"><img src="images/last-post4.jpg" alt="Накрытый стол" class="img-class"></a>
       </div>
       <div class="contentbox">
         <ul class="headbox">
@@ -148,7 +151,7 @@
     </article>
     <article class="article">
       <div class="picture">
-        <a href="#" class="picture-link"><img src="images/last-post5.jpg" alt="Модная подушка"></a>
+        <a href="#" class="picture-link"><img src="images/last-post5.jpg" alt="Модная подушка" class="img-class"></a>
       </div>
       <div class="contentbox">
         <ul class="headbox">
