--- a/index.html
+++ b/index.html
@@ -10,10 +10,48 @@
 </head>
 
 <body>
+  <div class="popup">
+    <div class="b-popup">
+          <button class="button-popup"></button>
+          <div class="b-popup-content">
+          <h3 class="name-popup">Ваш фидбек</h3>
+          <label class="form-group">
+			     <span class="form-hint">Как часто вы заходите на сайт?</span>
+			      <select class="select">
+				     <option>Раз в месяц</option>
+				     <option selected="">Почти каждый день</option>
+				     <option>Раз в неделю</option>
+			      </select>
+		      </label>
+          <div class="form-row">
+		        <span class="form-hint">Вы подписаны на e-mail рассылку?</span>
+		         <label class="radio-group">
+			          <input type="radio" class="radio" name="radio-group">
+			            <span class="radio-group-text">Да</span>
+		          </label>
+		          <label class="radio-group">
+			          <input type="radio" class="radio" name="radio-group">
+		            	<span class="radio-group-text">Нет</span>
+	           	</label>
+	        </div>
+          <div class="form-row">
+		        <label class="form-group">
+			        <span class="form-hint">Расскажите, какой контент вы хотели бы видеть на нашем сайте?</span>
+			        <input type="text" class="field-placeholder" placeholder="Может, больше рецептов?" required="">
+		        </label>
+	        </div>
+          <div class="form-row">
+		        <button class="button-form">Отправить</button>
+	        </div>
+      </div>
+    </div>
+  </div>
   <header class="header">
     <div class="header-header">
-      <a href="#" class="a-class">
-        <div class="header-logo"></div>
+      <a href="#" class="logo-link">
+        <div class="header-logo">
+          <img src="svg/noemi-logo.svg" alt="Noemi" class="logo-img">
+        </div>
       </a>
       <nav class="menu">
         <button class="menu__button js-menu__button">
@@ -46,7 +84,7 @@
   <div class="new-aside">
     <h2 class="new-name">Сейчас в тренде</h2>
     <div class="new-articles">
-      <article class="new-article1">
+      <article class="new-article pic1">
         <div class="new-contentbox">
           <ul class="new-headbox">
             <li class="new-Tag"><a href="#" class="new-tag-link">Lifestyle</a></li>
@@ -55,7 +93,7 @@
           <h2 class="new-content-named"><a href="#" class="new-named-link">Сейчас в тренде: сад на подоконнике</a></h2>
         </div>
       </article>
-      <article class="new-article2">
+      <article class="new-article pic2">
         <div class="new-contentbox">
           <ul class="new-headbox">
             <li class="new-Tag"><a href="#" class="new-tag-link">Food</a></li>
@@ -63,7 +101,7 @@
           <h2 class="new-content-named"><a href="#" class="new-named-link">Сыры на красивых картинках из интернета: какие они на вкус?</a></h2>
         </div>
       </article>
-      <article class="new-article3">
+      <article class="new-article pic3">
         <div class="new-contentbox">
           <ul class="new-headbox">
             <li class="new-Tag"><a href="#" class="new-tag-link">Lifestyle</a></li>
@@ -72,7 +110,7 @@
           <h2 class="new-content-named"><a href="#" class="new-named-link">Собираемся в первый поход в горы</a></h2>
         </div>
       </article>
-      <article class="new-article4">
+      <article class="new-article pic4">
         <div class="new-contentbox">
           <ul class="new-headbox">
             <li class="new-Tag"><a href="#" class="new-tag-link">Food</a></li>
@@ -322,7 +360,12 @@
       </div>
       <div class="shop-blocks">
         <div class="shop-block">
-          <img src="images/shop-item-desk1.jpg" class="shop-image" alt="Подушка">
+          <picture>
+            <source media="(max-width: 640px)" srcset="images/shop-item-mobile1.jpg" class="shop-image" alt="Подушка">
+            <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet1.jpg" class="shop-image" alt="Подушка">
+            <source media="(min-width: 1201px)" srcset="images/shop-item-desk1.jpg" class="shop-image" alt="Подушка">
+            <img src="images/shop-item-desk1.jpg" class="shop-image" alt="Подушка">
+          </picture>
           <div class="shop-content">
             <div class="shop-line"><a class="shop-line-link" href="#0">подушки на диван</a></div>
             <div>
@@ -339,10 +382,10 @@
         </div>
         <div class="shop-block">
           <picture>
-            <source media="(max-width: 640px)" srcset="images/shop-item-mobilet2.jpg" class="shop-image" alt="куклы">
-            <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet2.jpg" class="shop-image" alt="куклы">
-            <source media="(min-width: 1201px)" srcset="images/shop-item-desk2.jpg" class="shop-image" alt="куклы">
-            <img src="images/shop-item-desk2.jpg" class="shop-image" alt="Подушка">
+            <source media="(max-width: 640px)" srcset="images/shop-item-mobilet2.jpg" class="shop-image" alt="Куклы">
+            <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet2.jpg" class="shop-image" alt="Куклы">
+            <source media="(min-width: 1201px)" srcset="images/shop-item-desk2.jpg" class="shop-image" alt="Куклы">
+            <img src="images/shop-item-desk2.jpg" class="shop-image" alt="Куклы">
           </picture>
           <div class="shop-content">
             <div class="shop-line"><a class="shop-line-link" href="#0">Кукла «Зайчик»</a></div>
@@ -358,7 +401,12 @@
           </div>
         </div>
         <div class="shop-block">
-          <img src="images/shop-item-desk3.jpg" class="shop-image" alt="зрители на шее">
+          <picture>
+            <source media="(max-width: 640px)" srcset="images/shop-item-mobilet3.jpg" class="shop-image" alt="Шестиугольник">
+            <source media="(min-width: 641px) and (max-width: 1199px)" srcset="images/shop-item-tablet3.jpg" class="shop-image" alt="Шестиугольник">
+            <source media="(min-width: 1201px)" srcset="images/shop-item-desk3.jpg" class="shop-image" alt="Шестиугольник">
+            <img src="images/shop-item-desk3.jpg" class="shop-image" alt="Шестиугольник">
+          </picture>
           <div class="shop-content">
             <div class="shop-line"><a class="shop-line-link" href="#0">Шестиугольная рамка</a></div>
             <div>
